fix: strange compile issue after adding FreeRTOS, decide to test without FreeRTOS.

--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -46,3 +46,6 @@ clean:
 printsrc:
 	@echo "SRC_DIRS = $(SRC_DIRS)"
 	@echo "SRC = $(SRC)"
+
+flash:
+	openocd -f interface/stlink.cfg -f target/stm32wlx.cfg -c "init; halt" -c "program build/firmware.elf verify reset"
